--- a/public/styles.css
+++ b/public/styles.css
@@ -306,32 +306,93 @@ nav {
     z-index: 1;
 }
 
-.menu__card__details h4{
+.menu__card__details h4 {
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--white);
 }
 
-.menu__card__details h5{
+.menu__card__details h5 {
     margin-bottom: 5px;
     font-size: 2rem;
     font-weight: 600;
     color: var(--white);
 }
 
-.menu__card__details h5 span{
+.menu__card__details h5 span {
     margin-right: 10px;
     font-size: 1.2rem;
     color: #fdc55e;
 }
 
-.menu__card__details a{
-    color:  var(--white);
+.menu__card__details a {
+    color: var(--white);
 }
 
-.menu__card__details a:hover{
+.menu__card__details a:hover {
     color: var(--primary-color);
+}
+
+.client__container {
+    display: grid;
+    gap: 2rem;
+    overflow: hidden;
+}
+
+.client__image imag {
+    max-width: 550px;
+    margin-inline: auto;
+}
+
+.client__content .section__header {
+    margin-bottom: 2rem;
+}
+
+.client__content .section__description{
+    margin-bottom: 2rem;
+    font-size: 1.1rem;
+}
+
+.client__details{
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.client__details img{
+    max-width: 40px;
+    border-radius: 100%;
+}
+
+.client__details h4{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--text-dark);
+}
+
+.client__details h5{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-light);
+}
+
+.client__rating{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.client__rating span{
+    font-size: 1.2rem;
+    color: goldenrod;
+}
+
+.client__rating span:last-child{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-dark);
 }
 
 @media (width > 540px) {
@@ -425,5 +486,10 @@ nav {
 
     .service__grid {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .client__container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
     }
 }
