--- a/public/styles.css
+++ b/public/styles.css
@@ -349,50 +349,78 @@ nav {
     margin-bottom: 2rem;
 }
 
-.client__content .section__description{
+.client__content .section__description {
     margin-bottom: 2rem;
     font-size: 1.1rem;
 }
 
-.client__details{
+.client__details {
     margin-bottom: 2rem;
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-.client__details img{
+.client__details img {
     max-width: 40px;
     border-radius: 100%;
 }
 
-.client__details h4{
+.client__details h4 {
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--text-dark);
 }
 
-.client__details h5{
+.client__details h5 {
     font-size: 1rem;
     font-weight: 500;
     color: var(--text-light);
 }
 
-.client__rating{
+.client__rating {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.client__rating span{
+.client__rating span {
     font-size: 1.2rem;
     color: goldenrod;
 }
 
-.client__rating span:last-child{
+.client__rating span:last-child {
     font-size: 1rem;
     font-weight: 500;
     color: var(--text-dark);
+}
+
+.download__container {
+    background-color: rgba(245, 71, 72, 0.05);
+    overflow: hidden;
+}
+
+.download__container .section__container {
+    padding-block: 2rem 0;
+    display: grid;
+    gap: 2rem;
+}
+
+.download__image img {
+    max-width: 550px;
+    margin-inline: auto;
+}
+
+.download__content {
+    padding-block: 2rem;
+}
+
+.download__content .section__header {
+    margin-bottom: 2rem;
+}
+
+.download__content .section__description {
+    margin-bottom: 2rem;
 }
 
 @media (width > 540px) {
@@ -488,8 +516,17 @@ nav {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .client__container{
+    .client__container {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
+    }
+
+    .download__container.section__container {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .download__image {
+        grid-area: 1/2/2/3;
     }
 }
